--- a/Bibliotecafx/src/main/resources/org/example/bibliotecafx/GestionarLibros.fxml
+++ b/Bibliotecafx/src/main/resources/org/example/bibliotecafx/GestionarLibros.fxml
@@ -7,16 +7,11 @@
 
 <?import java.net.URL?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.bibliotecafx.GestionarLibrosController" alignment="CENTER" spacing="20">
-    <!-- Aplicar el archivo de estilos -->
-
-    <stylesheets>
-        <URL value="@estilos/estilos.css"/>
-    </stylesheets>
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.bibliotecafx.GestionarLibrosController" alignment="CENTER" spacing="20" stylesheets="@estilos/estilos.css">
 
     <!-- Botones para gestionar libros -->
-    <Button text="Agregar Libro" onAction="#agregarLibro"/>
-    <Button text="Modificar Libro" onAction="#modificarLibro"/>
-    <Button text="Eliminar Libro" onAction="#eliminarLibro"/>
-    <Button text="Volver" onAction="#volver"/>
+    <Button text="Agregar Libro" onAction="#agregarLibro" />
+    <Button text="Modificar Libro" onAction="#modificarLibro" />
+    <Button text="Eliminar Libro" onAction="#eliminarLibro" />
+    <Button text="Volver" onAction="#volver" />
 </VBox>
