--- a/Bibliotecafx/src/main/resources/org/example/bibliotecafx/GestionarPrestamos.fxml
+++ b/Bibliotecafx/src/main/resources/org/example/bibliotecafx/GestionarPrestamos.fxml
@@ -3,6 +3,7 @@
 <?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <VBox alignment="CENTER" prefHeight="600.0" prefWidth="600.0" spacing="20" styleClass="vbox" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.bibliotecafx.GestionarPrestamosController">
     <!-- Aplicar el archivo de estilos -->
@@ -10,6 +11,11 @@
     <stylesheets>
         <URL value="@estilos/estilos.css" />
     </stylesheets>
+   <Label text="PRÉSTAMOS">
+      <font>
+         <Font name="System Bold" size="27.0" />
+      </font>
+   </Label>
    <AnchorPane prefHeight="611.0" prefWidth="574.0">
       <children>
           <Button layoutX="14.0" layoutY="14.0" onAction="#agregarPrestamo" text="Agregar Préstamo a Socio" />
