--- a/Bibliotecafx/src/main/resources/org/example/bibliotecafx/GestionarLibros.fxml
+++ b/Bibliotecafx/src/main/resources/org/example/bibliotecafx/GestionarLibros.fxml
@@ -1,17 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import org.example.bibliotecafx.GestionarLibrosController?>
-<?import javafx.geometry.Pos?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.Scene?>
 
-<?import java.net.URL?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.bibliotecafx.GestionarLibrosController" alignment="CENTER" spacing="20" stylesheets="@estilos/estilos.css">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="600.0" spacing="20" stylesheets="@estilos/estilos.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.bibliotecafx.GestionarLibrosController">
+   <Label prefHeight="39.0" prefWidth="103.0" text="LIBROS">
+      <font>
+         <Font name="System Bold" size="27.0" />
+      </font>
+   </Label>
+    <AnchorPane prefHeight="555.0" prefWidth="637.0">
+        <children>
 
-    <!-- Botones para gestionar libros -->
-    <Button text="Agregar Libro" onAction="#agregarLibro" />
-    <Button text="Modificar Libro" onAction="#modificarLibro" />
-    <Button text="Eliminar Libro" onAction="#eliminarLibro" />
-    <Button text="Volver" onAction="#volver" />
+            <Button layoutX="14.0" layoutY="14.0" onAction="#agregarLibro" text="Agregar Libro" />
+            <Button layoutX="153.0" layoutY="14.0" onAction="#modificarLibro" text="Modificar Libro" />
+            <Button layoutX="299.0" layoutY="14.0" onAction="#eliminarLibro" text="Eliminar Libro" />
+            <Button layoutX="459.0" layoutY="455.0" onAction="#volver" text="Volver" />
+         <Button layoutX="14.0" layoutY="68.0" mnemonicParsing="false" text="Buscar Libro" />
+         <Button layoutX="153.0" layoutY="68.0" mnemonicParsing="false" text="Listar Libros Disponibles" />
+         <Label layoutX="14.0" layoutY="132.0" prefHeight="17.0" prefWidth="37.0" text="Título">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+         <Label layoutX="14.0" layoutY="170.0" prefHeight="20.0" prefWidth="37.0" text="ISBN">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+         <Label layoutX="14.0" layoutY="208.0" text="Autor">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+         <Label layoutX="14.0" layoutY="242.0" text="Editorial">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+         <Label layoutX="14.0" layoutY="275.0" text="Año Publicación">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+         <TextField id="titulo" layoutX="130.0" layoutY="130.0" />
+         <TextField id="isbn" layoutX="130.0" layoutY="168.0" />
+         <TextField id="autor" layoutX="130.0" layoutY="206.0" />
+         <TextField id="editorial" layoutX="130.0" layoutY="240.0" />
+         <TextField id="anyopublicacion" layoutX="130.0" layoutY="273.0" />
+         <TextArea layoutX="14.0" layoutY="305.0" prefHeight="182.0" prefWidth="438.0" />
+        </children>
+    </AnchorPane>
 </VBox>
