--- a/Bibliotecafx/src/main/resources/org/example/bibliotecafx/GestionarAutores.fxml
+++ b/Bibliotecafx/src/main/resources/org/example/bibliotecafx/GestionarAutores.fxml
@@ -21,7 +21,7 @@
                 <!-- Tab Añadir -->
                 <Tab text="Añadir">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="287.0" prefWidth="558.0">
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="342.0" prefWidth="667.0">
 
                             <Label fx:id="lblMensaje" layoutX="263.0" layoutY="257.0" prefHeight="45.0" prefWidth="262.0" style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: green; -fx-font-family: 'Segoe UI', sans-serif;  -fx-padding: 10px;" text="" />
 
@@ -32,7 +32,7 @@
                                 <Label layoutX="184.0" layoutY="187.0" text="Nacionalidad:" />
                                 <TextField fx:id="txtNacionalidad" layoutX="333.0" layoutY="183.0" prefWidth="200.0" />
 
-                                <Button fx:id="btnGuardar" layoutX="333.0" layoutY="330.0" mnemonicParsing="false" onAction="#guardarAutor" prefHeight="64.0" prefWidth="124.0" text="Guardar" />
+                                <Button fx:id="btnGuardar" layoutX="333.0" layoutY="310.0" mnemonicParsing="false" onAction="#guardarAutor" prefHeight="64.0" prefWidth="124.0" text="Guardar" />
                             </children>
                         </AnchorPane>
                     </content>
@@ -51,7 +51,7 @@
                                 <Label layoutX="285.0" layoutY="150.0" text="Nacionalidad:" />
                                 <TextField fx:id="txtNacionalidadMod" layoutX="420.0" layoutY="146.0" prefWidth="200.0" />
 
-                                <Button fx:id="btnGuardarMod" layoutX="337.0" layoutY="337.0" mnemonicParsing="false" onAction="#modificarAutor" prefHeight="49.0" prefWidth="114.0" text="Guardar" />
+                                <Button fx:id="btnGuardarMod" layoutX="338.0" layoutY="311.0" mnemonicParsing="false" onAction="#modificarAutor" prefHeight="49.0" prefWidth="114.0" text="Guardar" />
                             </children>
                         </AnchorPane>
                     </content>
@@ -79,7 +79,7 @@
                                 <Label layoutX="180.0" layoutY="103.0" text="Nombre" />
                                 <TextField fx:id="txtBuscar" layoutX="240.0" layoutY="99.0" prefWidth="220.0" />
 
-                                <Button fx:id="btnBuscar" layoutX="514.0" layoutY="97.0" mnemonicParsing="false" onAction="#buscarAutor" text="Buscar" />
+                                <Button fx:id="btnBuscar" layoutX="513.0" layoutY="83.0" mnemonicParsing="false" onAction="#buscarAutor" text="Buscar" />
 
                                 <ListView fx:id="listResultados" layoutX="180.0" layoutY="139.0" prefHeight="220.0" prefWidth="400.0" />
                             </children>
@@ -96,7 +96,7 @@
                                 <TableView fx:id="tablaAutores" layoutX="137.0" layoutY="73.0" prefHeight="270.0" prefWidth="515.0">
                                     <columns>
                                         <TableColumn fx:id="colNombre" prefWidth="258.0" text="Nombre" />
-                                        <TableColumn fx:id="colNacionalidad" prefWidth="141.99996948242188" text="Nacionalidad" />
+                                        <TableColumn fx:id="colNacionalidad" prefWidth="256.0" text="Nacionalidad" />
                                     </columns>
                                 </TableView>
                             </children>
